# fastapi-guardian

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: with_sqlalchemy.py  with_tortoise.py
src/fastapi_guardian/: __init__.py  dependencies.py  dto.py  engine.py  exceptions.py  expression.py  resource.py  tortoise_test.py
src/fastapi_guardian/ext/: sqlalchemy.py  tortoise.py
tests/test_integration/: test_sqlalchemy.py
tests/test_smoke/: test_examples.py
tests/test_unit/: test_sqlalchemy.py  test_tortoise.py
