[project]
name = "fastapi-guardian"
version = "0.1.0"
description = "Flexible permissions for FastAPI"
readme = "README.md"
authors = [
    { name = "achopik", email = "artikchopik@gmail.com" }
]
requires-python = ">=3.14"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
    "fastapi", "authorization", "security"
]
dependencies = [
    "fastapi>=0.130.0",
    "lark>=1.3.1",
    "pydantic>=2.12.0",
]


[project.urls]
Repository = "https://github.com/achopik/fastapi-guardian"

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy>=2.0.10"
]
tortoise = [
    "tortoise-orm>=1.1.0"
]

[dependency-groups]
dev = [
    "ruff==0.15.11",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "mypy==1.20.0",
    "types-python-dateutil==2.9.0.20250516",
    "pytest-cov>=7.1.0",
    "factory-boy>=3.3.3",
    "pytest-factoryboy>=2.8.1",
    "uvicorn>=0.46.0",
    "itsdangerous>=2.2.0",
    "bandit[sarif,yaml]>=1.9.4",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"


[tool.mypy]
python_version = "3.14"
show_error_codes = true
disable_error_code = ["misc"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]
check_untyped_defs = true
explicit_package_bases = true
mypy_path = ["src", "tests"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
